# oremirror

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
demos/01-basic/: SCENARIO.md  fixtures.json  images.txt  images.yaml
examples/: help.txt  version.txt
oremirror/: __init__.py  ai.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_smoke.py
