[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-oremirror"
version = "0.1.1"
description = "OCI registry mirror/sync for disconnected environments — plan, pull to an OCI layout, verify, push across the air-gap"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["oci", "registry", "airgap", "kubernetes", "supply-chain", "cli", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/oremirror"

[project.scripts]
"oremirror-emit" = "oremirror.connect:emit_main"
oremirror = "oremirror.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["oremirror"]
